# nwm-coastal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLUSTER_INSTALL.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TERMS.md  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd.yml  docs.yml  test.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/CONTRIBUTING/: index.html
0.2.0/DESIGN/: index.html
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/hydromt_sfincs_issues/: index.html
0.2.0/reference/api/: index.html
0.2.0/user-guide/cli/: index.html
0.2.0/user-guide/configuration/: index.html
0.2.0/user-guide/python-api/: index.html
0.2.0/user-guide/workflow-stages/: index.html
3.1.1.0.0/: sitemap.xml
3.1.1.0.0/CHANGELOG/: index.html
3.1.1.0.0/CONTRIBUTING/: index.html
3.1.1.0.0/DESIGN/: index.html
3.1.1.0.0/reference/api/: index.html
3.1.1.0.0/search/: search_index.json
3.1.1.0.0/user-guide/cli/: index.html
3.1.1.0.0/user-guide/configuration/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
DESIGN/: index.html
coastal_models/schism/: build.sh  pixi.toml  recipe.yaml
coastal_models/sfincs/: build.sh  pixi.toml  recipe.yaml
dev/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/CONTRIBUTING/: index.html
dev/DESIGN/: index.html
dev/LICENSE/: index.html
dev/examples/: index.html  sfincs.sh  texas_sfincs_quadtree.yaml
dev/examples/lavaca-tx/: create.yaml  (+1 more)
dev/hydromt_sfincs_issues/: index.html
dev/schism_compilation/: index.html
dev/search/: search_index.json
dev/sfincs_compilation/: index.html
dev/stofs_tpxo_improvements/: index.html
dev/workflow_restructuring_plan/: index.html
docs/: design.md  hooks.py  hydromt_sfincs_issues.md  index.md  schism_compilation.md  sfincs_compilation.md  stofs_tpxo_improvements.md  workflow_restructuring_plan.md
docs/examples/: .gitignore  create_sfincs.yaml  create_texas_quadtree.yaml  index.md  schism.sh  sfincs.sh  texas.yaml  texas_aoi.geojson  texas_sfincs_quadtree.yaml  texas_stofs_ana.yaml  texas_tpxo_retro.yaml
docs/getting-started/: cluster-install.md  installation.md  quickstart.md
docs/reference/: api.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  configuration.md  python-api.md  qgis-plugin.md  workflow-stages.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
legacy-coastal/: .dockerignore  Dockerfile.ngencoastal  Dockerfile.sfincs  README.md  environment.yml
legacy-coastal/FVCOM_Download/: README.md  download_fvcom.bash
legacy-coastal/Observed_Waterlevel_Scripts/: README.md  download_noaa_obv_wl.py  find_waterlevel_stations.py
legacy-coastal/SFINCS/: Coastal Forcing Engine.pptx  Dockerfile.delft_dashboard  Dockerfile.hydromt_sfincs  readme.md  requirements.txt
legacy-coastal/atmo/: README.md  makeAtmo.py  run_makeAtmo.bash
legacy-coastal/calib/: Model_tpxo10_atlas  README.md  combine_sink_source.bash  initial_discharge.bash  make_tpxo_ocean.bash  merge_source_sink.bash  post_nwm_forcing_coastal.bash  post_regrid_stofs.bash  post_schism.bash  pre_nwm_forcing_coastal.bash  pre_regrid_stofs.bash  pre_schism.bash  run_sing_coastal_workflow_make_tpxo_ocean.bash  run_sing_coastal_workflow_post_forcing_coastal.bash  run_sing_coastal_workflow_post_make_stofs_ocean.bash  run_sing_coastal_workflow_pre_forcing_coastal.bash  run_sing_coastal_workflow_pre_make_stofs_ocean.bash  run_sing_coastal_workflow_pre_schism.bash  run_sing_coastal_workflow_update_params.bash  schism_calib.cfg  setup_tpxo.txt  sing_run.bash  update_param.bash
legacy-coastal/compare_observed/: NOAAObservedWL.py  README.md  SCHISMOutput.py  compare_observed.py  plot_water_level.gp  run_compare_observed.bash
legacy-coastal/forcing_downloader/: README.md  data_downloader.py  main.py
legacy-coastal/forecast/: download_hrrr.bash  forecast_sing_run.bash  nexgen_preprocessing.bash  ngen_forecast_sing.bash  pre_schism.bash  requirements.txt  run_forecast_nexgen_preprocessing.bash  run_sing_coastal_workflow_post_make_stofs_ocean.bash  run_sing_coastal_workflow_pre_make_stofs_ocean.bash  run_sing_coastal_workflow_pre_schism.bash  schism_forecast.cfg
qgis_plugin/nwm_coastal/: __init__.py  metadata.txt  plugin_main.py
reference/api/: index.html
scripts/: clean_notebooks.py  ensure-schism.sh  ensure-sfincs.sh  find_compatible_sdk.sh
search/: search_index.json
src/coastal_calibration/: __init__.py  base.py  cli.py  coops_api.py  creator.py  downloader.py  logging.py  runner.py  schism_prep.py  scripts_path.py  sfincs_runner.py  sflux.py  time_utils.py  utils.py  workflow_utils.py
tests/: conftest.py  test_config_schema.py  test_coops_api.py  test_copdem.py  test_downloader.py  test_floodmap.py  test_gdal_helpers.py  test_gebco_wms.py  test_noaa_dem.py  test_raster_utils.py  test_runner.py  test_sfincs_catalog.py  test_sfincs_create.py  test_sfincs_obs_stage.py  test_sfincs_workflow.py  test_stages.py
tests/common/: conftest.py  test_cli.py  test_config_schema.py  test_copdem.py  test_downloader.py  test_esa_worldcover.py  test_gebco_wms.py  test_logging.py  test_mpi.py  test_noaa_dem.py  test_runner.py  test_schism_prep.py  test_stages.py  test_streamflow.py
tests/legacy_scripts/: __init__.py  combine_sink_source.bash  post_schism.bash  pre_schism.bash
tests/regridding/: conftest.py  synthetic.py  test_regrid_estofs.py  test_regrid_forcings.py
tests/schism/: schism_testkit.py  test_schism_compilation.py
tests/sfincs/: conftest.py  test_coops_api.py  test_floodmap.py  test_gdal_helpers.py  test_raster_utils.py  test_sfincs_catalog.py  test_sfincs_create.py  test_sfincs_obs_stage.py  test_sfincs_workflow.py
user-guide/cli/: index.html
user-guide/configuration/: index.html
user-guide/python-api/: index.html
user-guide/workflow-stages/: index.html
(+295 files in other folders)
