[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "coastal-calibration"
description = "A coastal model (SCHISM, SFINCS) workflow on HPC clusters"
readme = "README.md"
keywords = [
  "calibration",
  "coastal",
  "hpc",
  "schism",
  "sfincs",
  "singularity",
  "slurm",
]
license = { file = "LICENSE" }
authors = [ { name = "Taher Chegini", email = "tchegini@dewberry.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
dynamic = [
  "version",
]
dependencies = [
  "fsspec",
  "geopandas>=1",
  "netcdf4",
  "numpy>=2",
  "pandas>=2.2",
  "pyproj>=3",
  "pyyaml>=6",
  "rich-click",
  "rioxarray>=0.17",
  "s3fs",
  "shapely>=2",
  "tiny-retriever>=0.3",
  "xarray>=2024.1",
]
optional-dependencies.docs = [
  "jupytext",
  "mike>=2",
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.25,<0.26",
  "mkdocs-materialx",
  "mkdocstrings[python]>=0.27",
  "ruff",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.notebook = [
  "ipykernel",
  "ipywidgets",
  "jupytext",
  "nbconvert",
]
optional-dependencies.plot = [
  "contextily>=1.6",
  "geopandas>=1",
  "matplotlib>=3.9",
  "numpy>=2",
  "pandas>=2.2",
  "shapely>=2",
  "xarray>=2024.1",
]
optional-dependencies.sfincs = [
  "dotenv",
  "hydromt>=1.3",
  "icechunk>=1.0.2",
  # "hydromt-sfincs>=2.0.0rc1",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pandas-stubs",
  "pyright",
  "types-geopandas",
  "types-pyyaml",
  "types-shapely",
]
urls.Documentation = "https://ngwpc.github.io/nwm-coastal"
urls.Source = "https://github.com/NGWPC/nwm-coastal"
scripts.coastal-calibration = "coastal_calibration.cli:main"

[tool.hatch]
build.targets.sdist.exclude = [
  "*.tar.gz",
]
build.targets.wheel.packages = [
  "src/coastal_calibration",
]
version.source = "vcs"

[tool.pixi.environments]
test311-common = { features = [ "test", "test-common", "py311" ] }
test311-sfincs = { features = [ "test", "test-sfincs", "sfincs", "plot", "py311" ] }
test311-schism = { features = [ "test", "test-schism", "schism", "plot", "py311" ] }
test313-common = { features = [ "test", "test-common", "py313" ] }
test313-sfincs = { features = [ "test", "test-sfincs", "sfincs", "plot", "py313" ] }
test313-schism = { features = [ "test", "test-schism", "schism", "plot", "py313" ] }
test311 = { features = [ "test", "test311", "schism", "sfincs", "plot", "py311" ] }
test313 = { features = [ "test", "test313", "schism", "sfincs", "plot", "py313" ] }
dev = { features = [ "notebook", "schism", "sfincs", "plot", "test", "py313" ] }
schism = { features = [ "notebook", "schism", "plot", "py313" ] }
sfincs = { features = [ "notebook", "sfincs", "plot", "py313" ] }
typecheck = { features = [ "typecheck", "schism", "sfincs", "plot", "test", "py313" ] }
lint = { features = [ "lint", "py313" ], no-default-feature = true }
docs = { features = [ "docs", "py313" ] }

[tool.pixi.feature.docs.tasks]
docs-build = "mkdocs build --strict"
docs-serve = "mkdocs serve"
docs-deploy = "mike deploy --push --update-aliases dev latest"
docs-release = "mike deploy --push --update-aliases $(git describe --tags --abbrev=0) stable"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.notebook.tasks]
# Sync all percent-format .py scripts → paired .ipynb files
nb-sync = "jupytext --sync docs/examples/notebooks/*.py"
# Execute all notebooks in-place (requires .ipynb to exist; run nb-sync first)
nb-execute = "jupyter nbconvert --to notebook --execute --inplace docs/examples/notebooks/*.ipynb"
# Strip ANSI codes and absolute paths from outputs — run after nb-execute before committing
nb-clean = "python scripts/clean_notebooks.py"
# Full workflow: sync .py → .ipynb, then execute and clean — use before building docs or committing
nb-run = { depends-on = [ "nb-sync", "nb-execute", "nb-clean" ] }
# Pair an existing .ipynb with a .py counterpart (one-time setup for imported notebooks)
nb-pair = "jupytext --set-formats 'ipynb,py:percent' docs/examples/notebooks/*.ipynb"
# Strip all cell outputs from .ipynb files (keeps repo diff clean)
nb-clear = "jupyter nbconvert --ClearOutputPreprocessor.enabled=True --to notebook --inplace docs/examples/notebooks/*.ipynb"

[tool.pixi.feature.plot.dependencies]
proj = "*"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
proj = "*"
libgdal-core = "*"
hdf5 = { version = "*", build = "mpi_openmpi_*" }
libnetcdf = "*"
netcdf4 = { version = "*", build = "mpi_openmpi_*" }
netcdf-fortran = { version = "*", build = "mpi_openmpi_*" }

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
proj = "*"
libgdal-core = "*"
hdf5 = { version = "*", build = "mpi_openmpi_*" }
libnetcdf = "*"
netcdf4 = { version = "*", build = "mpi_openmpi_*" }
netcdf-fortran = { version = "*", build = "mpi_openmpi_*" }

[tool.pixi.feature.schism.dependencies]
schism = { path = "coastal_models/schism" }
# Force MPI (OpenMPI) build variants so ESMF/esmpy runs with parallel support.
# Without the build constraint, conda-forge resolves the nompi variants.
mpi = { version = "*", build = "openmpi" }
openmpi = "*"
esmf = { version = "*", build = "mpi_openmpi_*" }
esmpy = "*"
mpi4py = "*"

[tool.pixi.feature.sfincs.dependencies]
sfincs = { path = "coastal_models/sfincs" }

[tool.pixi.feature.sfincs.pypi-dependencies]
hydromt-sfincs = { git = "https://github.com/Deltares/hydromt_sfincs", rev = "41aac0a3980fc2714ec28eafb0463d40abfc979a" }

[tool.pixi.feature.test-common.tasks]
test-common = { cmd = [
  "pytest",
  "tests/common",
  "--cov",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit-common.xml",
  "--durations=5",
] }
report = { cmd = [ "coverage", "report" ], depends-on = [ "test-common" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.test-schism.tasks]
test-schism = { cmd = [
  "pytest",
  "tests/schism",
  "--no-cov",
  "--junitxml=junit-schism.xml",
  "--durations=5",
] }

[tool.pixi.feature.test-sfincs.tasks]
test-sfincs = { cmd = [
  "pytest",
  "tests/sfincs",
  "--cov",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit-sfincs.xml",
  "--durations=5",
] }

[tool.pixi.feature.test311.tasks]
test = { cmd = [
  "pytest",
  "tests/",
  "--ignore=tests/legacy_scripts",
  "--no-cov",
  "--junitxml=junit.xml",
  "--durations=5",
] }
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.test313.tasks]
test = { cmd = [
  "pytest",
  "tests/",
  "--ignore=tests/legacy_scripts",
  "--no-cov",
  "--junitxml=junit.xml",
  "--durations=5",
] }
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.typecheck.pypi-dependencies]
hydromt-sfincs = { git = "https://github.com/Deltares/hydromt_sfincs", rev = "41aac0a3980fc2714ec28eafb0463d40abfc979a" }

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"

[tool.pixi.pypi-dependencies]
coastal_calibration = { path = ".", editable = true }

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-arm64" ]
preview = [ "pixi-build" ]

[tool.ruff]
target-version = "py311"
line-length = 100
include = [
  "src/coastal_calibration/**/*.py",
  "src/coastal_calibration/*.py",
  "tests/**/*.py",
]
exclude = [
  "docs/examples/notebooks/*.py",
  "tests/legacy_scripts/**/*.py",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # refurb
  "FURB",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]
lint.ignore = [
  "D103",
  "D105",
  # module level imports
  "E402",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  # specific type error ignored
  "PGH003",
  # top-level imports
  "PLC0415",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]
lint.per-file-ignores."docs/examples/notebooks/*.{ipynb,py}" = [
  # missing module docstring
  "D100",
  # use of "assert"
  "S101",
  # print statements
  "T20",
]
lint.per-file-ignores."src/coastal_calibration/regridding/*.py" = [
  # physics variable naming (Rd, Tv, H, LON, LAT)
  "N806",
  # ESMF convention: import esmpy as ESMF
  "N812",
]
lint.per-file-ignores."src/coastal_calibration/tides/pytides/*.py" = [
  # scientific naming conventions (tidal constituents: f_M2, u_K1, etc.)
  "N802",
  "N806",
]
lint.per-file-ignores."tests/**/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
  # insecure use of path
  "S108",
]
lint.extend-safe-fixes = [
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [
  "coastal_calibration",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.git,./htmlcov,pixi.lock,./site,./cache,*.ipynb"
ignore-words-list = "gages,parm,oce,gage,nd"

[tool.pyproject-fmt]
expand_tables = [ "tool.pixi" ]

[tool.pyright]
pythonVersion = "3.11"
include = [ "src" ]
ignore = [
  "src/coastal_calibration/tides/pytides/*.py",
]
typeCheckingMode = "strict"
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "-v",
  "--durations=5",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
ini_options.filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*'cgi' is deprecated.*",
  "ignore:.*Ensure you extract a single element.*",
  "ignore:.*Deprecated in Pydantic V2.0.*",
]
ini_options.markers = [
  "schism: SCHISM compilation and workflow tests (require pixi schism env)",
  "sfincs: SFINCS workflow integration tests (require HydroMT-SFINCS + plot deps)",
]
ini_options.testpaths = [
  "tests/common",
  "tests/schism",
  "tests/sfincs",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/legacy_scripts/*",
]
run.parallel = true
run.source_pkgs = [
  "coastal_calibration",
]
paths.source = [ "src", "*/site-packages" ]
report.exclude_lines = [
  "if TYPE_CHECKING:",
  "raise ServiceUnavailableError",
]
report.ignore_errors = true
report.omit = [
  "**/__init__.py",
  "*/legacy_scripts/*",
]

[tool.jupytext]
notebook_metadata_filter = "kernelspec,jupytext"
cell_metadata_filter = "-all"
formats = "ipynb,py:percent"
